2006-12-03  Martin Blom  <martin@blom.org>

	* src/blomcall.c, src/include/blomcall.h, src/table68k: Changed
	op-code numbers to $FE00, $FE05 and $FEFF, in order not to
	conflict with MorphOS' reserved $FFxx range.

2006-11-23  Martin Blom  <martin@blom.org>

	* Merged e-uae-0.8.29-WIP3.

2006-07-31 01:51  evi1rich

	* src/compemu_raw_x86.c: Work-around for compiling new JIT SEGV
	  handler when GNUSOURCE isn't defined.  Better solution needed.

2006-07-31 00:22  evi1rich

	* configure.in: Updated version number for WIP3 release.

2006-07-31 00:22  evi1rich

	* README: Updated README for WIP3 release.

2006-07-30 23:52  evi1rich

	* src/gui-gtk/gtkui.c: In the Gtk+ UI's about page, when building
	  against Gtk+ 2.x, don't hack GDK to set font size, but instead
	  use the Gtk+ label widget's text markup functionality - which is
	  much cleaner.

2006-07-30 23:31  evi1rich

	* src/: compemu_raw_x86.c, compemu_support.c: Tried to clean up the
	  JIT's natmem fault handler and make it a little more portable.

2006-07-30 23:29  evi1rich

	* src/caps/caps.c: Fixed failure to build CAPS support on 68k
	  Amigas.

2006-07-27 22:45  evi1rich

	* configure.in: Some tweaks to the configure script so that the
	  behaviour when passing CFLAGS to configure is more predictable.
	  Note that, now, if you pass CFLAGS, you must include your desired
	  optimization level: for now, the configure script no longer
	  defaults to setting -O2 in this case. If you don't set CFLAGS
	  yourself, then you'll get the autotools default, which is -g -O2.

2006-07-27 21:26  evi1rich

	* configure.in: Removal of config.h header broke configure. Fixed.

2006-07-26 16:36  evi1rich

	* Makefile.am, config.h, src/akiko.c, src/ar.c, src/audio.c,
	  src/autoconf.c, src/blitter.c, src/blkdev.c, src/bsdsocket.c,
	  src/catweasel.c, src/cdrom.c, src/cfgfile.c, src/cia.c,
	  src/compemu_fpp.c, src/compemu_support.c, src/custom.c,
	  src/debug.c, src/disk.c, src/drawing.c, src/driveclick.c,