@@ -1,5 +1,8 @@
 2006-12-03  Martin Blom  <martin@blom.org>
 
+	* src/blomcall.c, rc/include/blomcall.h: Try to preserve
+	thread-local variable 'errno' across BJMP and timer interruptions.
+
 	* src/blomcall.c, src/include/blomcall.h, src/table68k: Changed
 	op-code numbers to $FE00, $FE05 and $FEFF, in order not to
 	conflict with MorphOS' reserved $FFxx range.
